--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,11 @@
   flex-direction: column;
 }
 
+.inputnick {
+  display: flex;
+  flex-direction: column;
+}
+
 .gamebutton {
   width: 300px;
   font-size: 24px;
@@ -28,8 +33,18 @@
 
 .buttonback {
   margin-bottom: 20px;
-  width: 100px;
+  width: max-content;
   background: #7ec7ff;
+}
+
+.buttonsubmit {
+  margin-top: 10px;
+  width: max-content;
+  background: #7effbe;
+}
+
+.buttonsubmit:hover {
+  background-color:#00ad62;
 }
 
 .buttonback:hover {
@@ -37,11 +52,24 @@
 }
 
 .observation {
+  margin-top: 1px;
+  border-radius: 5px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+}
+
+.obsline {
   text-align: justify;
+  margin-top: 0;
+  margin-bottom: 0;
+  color: black;
 }
 
 .inventory {
   text-align: left;
+  background-color: rgb(11, 66, 24);
+  color: white;
 }
 
 .actions {
@@ -75,6 +103,7 @@
   padding-left: 5px;
   padding-right: 5px;
   padding-bottom: 2px;
+  margin-top: 7px;
 }
 
 @media only screen and (pointer: coarse) and (min-width: 480px) and (max-width: 710px){
